SITU-1113 SITU-136 fixed spacing issues

--- a/web/modules/custom/portland/modules/portland_address_verifier/css/portland_address_verifier.css
+++ b/web/modules/custom/portland/modules/portland_address_verifier/css/portland_address_verifier.css
@@ -85,19 +85,21 @@ input#enteredAddress {
   width: 40%;
   min-width: 225px;
   display: inline-block;
-  vertical-align: top;;
+  vertical-align: top;
+  margin-right: 4px;
 }
 
 .webform-state {
   display: inline-block;
-  vertical-align: top;;
+  vertical-align: top;
+  margin-right: 4px;
 }
 
 .webform-zip {
   width: 30%;
   min-width: 120px;
   display: inline-block;
-  vertical-align: top;;
+  vertical-align: top;
 }
 
 .webform-checkbox .form-element-container {
